--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Siva's Online Content Junction</title>
+    <title>Pay Now | Siva Prasad Mukherjee</title>
     <link rel="icon" href="https://r.socj.info/spm.ico">
 
     <meta name="robots" content="noindex, nofollow">
@@ -157,10 +157,17 @@
 
 
 <!--- Body ---!>
+<table>
+      <tr>
 
+        <td>
+<p><span style="font-size: 12px;"><strong>All Sales Are Final</strong></span><br /><span style="color: #ff0000; font-size: 13px;"><a style="color: #218e83; text-decoration: none;" href="https://p.spm.in.net" target="_blank">The product listed here is considered FINAL SALE and will not be eligible for return/exchange. Please CLICK HERE to refer to product page for final sale indication.</a></span></p>
+</td>
+      </tr>
+    </table>
 <center>
 <p class="english-text">Don't forget to send the screenshot of your successful payment to our support desk via WhatsApp:</p>
-<button type="button" style="background-color: #4CAF50; color: white; padding: 10px 20px; font-size: 16px; border: none; cursor: pointer;" onclick="window.open('https://support.spmukherjee.in', '_blank')">Support Desk</button>
+<button type="button" style="background-color: #4CAF50; color: white; padding: 10px 20px; font-size: 16px; border: none; cursor: pointer;" onclick="window.open('https://wa.link/4ig90x', '_blank')">Support Desk</button>
 </center>
 
 
