--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <tr>
 
         <td>
-<p><span style="font-size: 12px;"><span style="color: #ff0000; font-size: 13px;"><a style="color: #218e83; text-decoration: none;" href="https://cart.spm.in.net/" target="_blank">The product listed here is considered a FINAL SALE and is not eligible for return or exchange. Please check the product description before you buy.</a></span></p>
+<p><span style="font-size: 12px;"><span style="color: #ff0000; font-size: 13px;"><a style="color: #218e83; text-decoration: none;" href="https://cart.spm.in.net/">The product listed here is considered a FINAL SALE and is not eligible for return or exchange. Please check the product description before you buy.</a></span></p>
 </td>
       </tr>
     </table>
