--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <center>
 <p class="english-text" style="margin-bottom: 30px;">Pay Now:</p>
 
-<p><img class="responsive" src="https://r.socj.info/spm-gpay.jpeg
+<p><img class="responsive" src="spm-gpay.jpeg
 "></p>
 </center>
 
