--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pay Now | Siva Prasad Mukherjee</title>
-    <link rel="icon" href="https://r.socj.info/spm.ico">
+    <link rel="icon" href="spm.ico">
 
     <meta name="robots" content="noindex, nofollow">
     <meta charset="utf-8" />
