--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </table>
 <center>
 <p class="english-text">Don't forget to send the screenshot of your successful payment to our support desk via WhatsApp:</p>
-<button type="button" style="background-color: #4CAF50; color: white; padding: 10px 20px; font-size: 16px; border: none; cursor: pointer;" onclick="window.open('https://wa.link/4ig90x', '_blank')">Support Desk</button>
+<button type="button" style="background-color: #4CAF50; color: white; padding: 10px 20px; font-size: 16px; border: none; cursor: pointer;" onclick="window.open('https://support.spm.in.net/', '_blank')">Support Desk</button>
 </center>
 
 
