--- a/index.html
+++ b/index.html
@@ -1,222 +1,79 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Pay Now | Siva Prasad Mukherjee</title>
-    <link rel="icon" href="spm.ico">
+  <meta charset="UTF-8" />
+  <title>Pay Now | Siva Prasad Mukherjee</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com/"></script>
+</head>
+<body class="bg-yellow-50 text-center text-gray-800 p-6">
 
-    <meta name="robots" content="noindex, nofollow">
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <h1 class="text-2xl font-bold mb-2">One Step Closer — Let’s Complete the Payment</h1>
+  <p class="text-6xl font-extrabold text-gray-900 my-4">₹7</p>
+  <p class="text-lg mb-4">Please select an option below to complete payment using UPI.</p>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Link to Roboto font for English -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+  <button onclick="handleDonate()" class="bg-yellow-300 hover:bg-yellow-400 text-gray-900 font-bold py-3 px-6 rounded-xl shadow-md transition">
+    Proceed with UPI
+  </button>
 
-    <!-- Link to Noto Sans Bengali font for Bengali -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Bengali&display=swap">
+  <div id="upi-link-container" class="hidden mt-6">
+    <p class="mb-2">You’ll be redirected to your UPI app to complete the payment:</p>
+    <a id="upi-link" href="#" class="inline-block bg-green-600 hover:bg-green-500 text-white font-bold py-2 px-4 rounded-lg">Pay via UPI</a>
+  </div>
 
-    
+  <div id="qr-container" class="hidden mt-6">
+    <p class="mb-2">Or scan this QR code:</p>
+    <img id="qr-image" src="" alt="UPI QR Code" class="w-56 h-56 rounded-xl border-2 border-gray-300 mx-auto" />
+  </div>
 
-    <style type="text/css">
+  <div id="instruction" class="hidden mt-6 bg-yellow-100 border border-yellow-300 text-yellow-800 p-4 rounded-lg max-w-md mx-auto">
+    💬 Once you've completed the payment, please WhatsApp your full name to <strong id="display-whatsapp"></strong>.
+  </div>
 
-        /* Apply Roboto font to English text */
-        .english-text {
-            font-family: 'Roboto', sans-serif;
-        }
+  <div class="alert bg-yellow-100 border border-yellow-300 text-yellow-800 p-4 rounded-lg mt-6 max-w-md mx-auto" id="alert-box">
+    <!-- Content will be injected by JavaScript -->
+  </div>
 
-        /* Apply Noto Sans Bengali font to Bengali text */
-        .bengali-text {
-            font-family: 'Noto Sans Bengali', sans-serif;
-        }
+  <script>
+    const config = {
+      upiId: "spmohq@oksbi",
+      qrImage: "spm-gpay.jpeg",
+      whatsappNumber: "+919883787947",
+      whatsappLink: "https://wa.me/919883787947"
+    };
 
+    document.getElementById("upi-link").href = `upi://pay?pa=${config.upiId}&cu=INR&am=7`;
+    document.getElementById("qr-image").src = config.qrImage;
+    document.getElementById("display-whatsapp").textContent = config.whatsappNumber;
 
-        /* Style for the "Back to Top" button */
-        #back-to-top {
-            display: none;
-            position: fixed;
-            bottom: 20px;
-            right: 30px;
-            z-index: 99;
-            border: none;
-            outline: none;
-            background-color: #007BFF;
-            color: #fff;
-            cursor: pointer;
-            padding: 10px;
-            border-radius: 5px;
-        }
+    document.getElementById("alert-box").innerHTML = `
+      <strong>Important:</strong> All payments made through this page are considered FINAL and are not eligible for refund or exchange.<br><br>
+      <strong>Note:</strong> Don't forget to send a screenshot of your successful payment via WhatsApp: 
+      <a href="${config.whatsappLink}" class="underline text-blue-600" target="_blank">Click here to send</a>
+    `;
 
-        #back-to-top:hover {
-            background-color: #0056b3;
-        }
-
-        .responsive {
-  width: 90%;
-  height: auto;
-}
-
-        body {
-            background-color: #f0f0f2;
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-            font-size: 18px; /* Adjust the font size as per your preference */
-        }
-
-        div {
-            width: 600px;
-            margin: 5em auto;
-            padding: 2em;
-            background-color: #fdfdff;
-            border-radius: 0.5em;
-            box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
-        }
-
-        similar-gigs {
-            width: 500px;
-            margin: 5em auto;
-            padding: 2em;
-            background-color: #fdfdff;
-            border-radius: 0.5em;
-            box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
-        }
-        a.button:link, a.button:visited {
-            display: inline-block;
-            background-color: #1b74e4;
-            color: #fff;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 4px;
-        }
-
-        @media (max-width: 700px) {
-            div {
-                margin: 30px 20px 0;
-                width: auto;
-            }
-
-             .video-embed {
-        width: 100% !important;
-        margin: 0 auto; 
-     }
-
-    .embed-container { 
-        position: relative; 
-        padding-bottom: 56.25%;
-        overflow: hidden;
-        max-width: 100%;
-        height: auto;
-    } 
-
-    .embed-container iframe,
-    .embed-container object,
-    .embed-container embed { 
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+    function isMobileDevice() {
+      return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
     }
 
-        }
-    </style> 
+    function handleDonate() {
+      const upiLinkContainer = document.getElementById("upi-link-container");
+      const qrContainer = document.getElementById("qr-container");
+      const instruction = document.getElementById("instruction");
 
-<!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '291902130204737');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=291902130204737&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-  
-</head>
+      if (isMobileDevice()) {
+        upiLinkContainer.classList.remove("hidden");
+        upiLinkContainer.scrollIntoView({ behavior: "smooth" });
+      } else {
+        qrContainer.classList.remove("hidden");
+        qrContainer.scrollIntoView({ behavior: "smooth" });
+      }
 
-<body>
-
-    <div>
-
-
-<center>
-<p class="english-text" style="margin-bottom: 30px;">Pay Now:</p>
-
-<p><img class="responsive" src="spm-gpay.jpeg
-"></p>
-</center>
-
-
-<!--- Body ---!>
-<table>
-      <tr>
-
-        <td>
-<p><span style="font-size: 12px;"><span style="color: #ff0000; font-size: 13px;"><a style="color: #218e83; text-decoration: none;" href="https://cart.spm.in.net/">The product listed here is considered a FINAL SALE and is not eligible for return or exchange. Please check the product description before you buy.</a></span></p>
-</td>
-      </tr>
-    </table>
-<center>
-<p class="english-text">Don't forget to send the screenshot of your successful payment to our support desk via WhatsApp:</p>
-<button type="button" style="background-color: #4CAF50; color: white; padding: 10px 20px; font-size: 16px; border: none; cursor: pointer;" onclick="window.open('https://support.spm.in.net/', '_blank')">Support Desk</button>
-</center>
-
-
-
-<!--- Body End ---!>
-
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-
-
-
-        <p style="text-align: center;">
-            <span style="font-size: 12pt; font-family: lora, serif; color: #000000;">
-                Copyright &copy; <script>document.write(new Date().getFullYear())</script>.&nbsp;https://www.spm.in.net
-            </span>
-        </p>
-
-    <!-- Back to Top button -->
-    <button onclick="scrollToTop()" id="back-to-top" title="Go to top">Top</button>
-
-    <!-- JavaScript for the Back to Top functionality -->
-    <script>
-        // Function to scroll to the top of the page
-        function scrollToTop() {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-        }
-
-        // Show/hide the "Back to Top" button based on scroll position
-        window.onscroll = function() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById('back-to-top').style.display = 'block';
-            } else {
-                document.getElementById('back-to-top').style.display = 'none';
-            }
-        };
-    </script>
+      instruction.classList.remove("hidden");
+      setTimeout(() => {
+        instruction.scrollIntoView({ behavior: "smooth" });
+      }, 300);
+    }
+  </script>
 </body>
 </html>
