--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pay Now | Siva Prasad Mukherjee</title>
+  <title>Pay Now</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com/"></script>
 </head>
 <body class="bg-yellow-50 text-center text-gray-800 p-6">
 
   <h1 class="text-2xl font-bold mb-2">One Step Closer — Let’s Complete the Payment</h1>
-  <p class="text-6xl font-extrabold text-gray-900 my-4">₹7</p>
+
   <p class="text-lg mb-4">Please select an option below to complete payment using UPI.</p>
 
   <button onclick="handleDonate()" class="bg-yellow-300 hover:bg-yellow-400 text-gray-900 font-bold py-3 px-6 rounded-xl shadow-md transition">
@@ -42,7 +42,7 @@
       whatsappLink: "https://wa.me/919883787947"
     };
 
-    document.getElementById("upi-link").href = `upi://pay?pa=${config.upiId}&cu=INR&am=7`;
+    document.getElementById("upi-link").href = `upi://pay?pa=${config.upiId}&cu=INR`;
     document.getElementById("qr-image").src = config.qrImage;
     document.getElementById("display-whatsapp").textContent = config.whatsappNumber;
 
